# wk-inventory

./: .env.sample  Dockerfile  pyproject.toml
src/: __init__.py  tasks.py
src/database/: engine.py  models.py
wk-inventory/: models.py  task.py  tasks.py  utils.py
